--- a/IOT05/IOT05.html
+++ b/IOT05/IOT05.html
@@ -87,20 +87,20 @@
 
 
             <p>
-                These instructions will show you how to download and install Apache2 onto a Raspberry Pi.<br />
-                This software allows you to run a website on a Raspberry Pi.<br />
+                These instructions will show you how to download and install Nagios 4.x onto a Raspberry Pi.<br />
+                This software allows you to run a machine monitoring program on a Raspberry Pi.<br />
                 <br />
 
-                More information on <a href="https://www.nagios.org/" class="bg-info text-white" target="_blank">Nagios</a> is available online.<br />
+                More information on <a href="https://www.nagios.com/products/nagios-core/" class="bg-info text-white" target="_blank">Nagios Core</a> is available online.<br />
 
-                This software will allow you to monitor devices on your network(s) such as Apache webservers.
+                This software will allow you to monitor devices on your network(s).
             </p>
             <p>After completing this assignment you will be able to:</p>
             <ol>
                 <li>Obtain Nagios</li>
-                <li>Install Nagios on a Raspberry Pi</li>
+                <li>Install Nagios Core and Plug-Ins on a Raspberry Pi</li>
                 <li>Run Nagios</li>
-                <li>Monitor a website using Nagios</li>
+                <li>Monitor a computer using Nagios</li>
             </ol>
             <hr />
         </div>
@@ -136,23 +136,53 @@
                     <code>sudo apt-get full-upgrade</code>
                 </li>
 
-                <li>In the Terminal window enter the following command to install the Apache2 webserver:<br />
-                    <code>sudo apt install nagios3</code>
+                <li>Open the Chromium broswer to the following url:<br />
+                    <code>https://support.nagios.com/kb/article/nagios-core-installing-nagios-core-from-source-96.html#Raspbian</code><br />
+                    This article contains all the background information for this assignment.
                 </li>
 
-                <li>When prompted set the <code>nagiosadmin</code> password to <code>Nagio$</code><br />
+                <li>In the Terminal window enter the following sets of commands to install Nagios 4.x and required prerequisites:<br />
+                    <code>sudo apt-get install -y autoconf gcc libc6 make wget unzip apache2 apache2-utils php libgd-dev</code><br />
+                    <code>cd /tmp</code><br />
+                    <code>sudo wget -O nagioscore.tar.gz https://github.com/NagiosEnterprises/nagioscore/archive/nagios-4.4.5.tar.gz </code>  This downloads the code<br />
+                    <code>sudo tar xzf nagioscore.tar.gz </code>  <br />
+                    <code>cd /tmp/nagioscore-nagios-4.4.5/</code><br />
+                    <code>sudo ./configure --with-httpd-conf=/etc/apache2/sites-enabled</code><br />
+                    <code>sudo make all</code>  This compiles Nagios<br />
+                    <code>sudo make install-groups-users</code><br />
+                    <code>sudo usermod -a -G nagios www-data</code><br />
+                    <code>sudo make install</code><br />
+                    <code>sudo make install-daemoninit</code><br />
+                    <code>sudo make install-commandmode</code><br />
+                    <code>sudo make install-config</code><br />
+                    <code>sudo make install-webconf</code><br />
+                    <code>sudo a2enmod rewrite</code><br />
+                    <code>sudo a2enmod cgi</code><br />
+                    <code>sudo iptables -I INPUT -p tcp --destination-port 80 -j ACCEPT</code><br />
+                    <code>sudo apt-get install -y iptables-persistent</code>Answer YES twice to save existing rules<br />
+                    <code>sudo htpasswd -c /usr/local/nagios/etc/htpasswd.users nagiosadmin</code><br />
+                    When prompted, set the password to: <code>Nagio$</code><br />
                     <p>
                         <a href="NagiosAdmin.PNG" class="img-responsive img-rounded" target="popup" onclick="window.open('NagiosAdmin.PNG', 'popup'); return false;">
-                            <img src="NagiosAdmin.PNG" width="300" alt="WaveMon functions" class="img-responsive img-responsive" /></a>Nagios Admin<br />
+                            <img src="NagiosAdmin.PNG" width="300" alt="Nagios Password" class="img-responsive img-responsive" /></a>Nagios Password Prompt<br />
+                    </p>
+                    <code>sudo systemctl restart apache2.service</code><br />
+                    <code>sudo systemctl start nagios.service</code>  This will start Nagios Core<br />
+
+
+                </li>
+
+
+                <li>After the Nagios 4.4.5 install is complete, point your browser to the url: <code>127.0.0.1/nagios</code><br />
+                    Enter username <code>nagiosadmin</code> and password <code>Nagio$</code>
+                    <p>
+                        <a href="Nagios4.PNG" class="img-responsive img-rounded" target="popup" onclick="window.open('Nagios4.PNG', 'popup'); return false;">
+                            <img src="Nagios4.PNG" width="300" alt="Nagios4" class="img-responsive img-responsive" /></a>Nagios4 Running<br />
                     </p>
                 </li>
 
-                <li>After the Nagios3 install is complete, point your browser to the url: <code>127.0.0.1/nagios3</code><br />
-                    Enter username <code>nagiosadmin</code> and password <code>Nagio$</code>
-                    <p>
-                        <a href="Nagios3.PNG" class="img-responsive img-rounded" target="popup" onclick="window.open('Nagios3.PNG', 'popup'); return false;">
-                            <img src="Nagios3.PNG" width="300" alt="WaveMon functions" class="img-responsive img-responsive" /></a>Nagios Admin<br />
-                    </p>
+                <li>It is a good idea to reboot the Raspberry Pi, then open Chromium to Nagios:<br />
+                    <code>http://127.0.0.1/nagios</code>
                 </li>
 
                 <li>If the webpage does not appear, troubleshoot and resolve any issues.<br />
@@ -166,33 +196,50 @@
 
         <!--Exercise 2-->
 
-        <div class="col-lg-12"><a href="#Exercise02" class="btn btn-info" data-toggle="collapse">Exercise 2-Examine Nagios3</a></div>
+        <div class="col-lg-12"><a href="#Exercise02" class="btn btn-info" data-toggle="collapse">Exercise 2-Add Nagios Plug-Ins</a></div>
 
         <div id="Exercise02" class="collapse in  col-lg-12">
 
             <ol>
                 <li>These steps are performed on your Raspberry Pi.</li>
 
-                <li>Open the browser and go to: <code>127.0.0.1/nagios3</code> (if it is not already running) <br />
+                <li>Open the browser and go to: <code>127.0.0.1/nagios</code> (if it is not already running) <br />
                 </li>
 
                 <li>The home page contains links to the currrent status of your Raspberry Pi, and getting started.<br />
                 </li>
 
                 <li>In the left column, under the Current Status section, click the  &#39;Services&#39; link and examine the details. <br />
+                    You will notice some errors, so follow the steps below that will install the plug-ins to resolve this situation.<br />
 
                     <p>
-                        <a href="NagiosServices.PNG" class="img-responsive img-rounded" target="popup" onclick="window.open('NagiosServices.PNG', 'popup'); return false;">
-                            <img src="NagiosServices.PNG" width="300" alt="Nagios" class="img-responsive img-responsive" /></a>Nagios Services<br />
+                        <a href="Nagios4ServiceErrors.PNG" class="img-responsive img-rounded" target="popup" onclick="window.open('Nagios4ServiceErrors.PNG', 'popup'); return false;">
+                            <img src="Nagios4ServiceErrors.PNG" width="300" alt="Nagios4 Service Errors" class="img-responsive img-responsive" /></a>Nagios4 Service Errors<br />
                     </p>
                 </li>
 
-                <li>To find out more about Nagios visit this web page:<br />
-                    <code>https://raspberrytips.com/nagios-raspberry-pi/</code><br />
-                    Note that installing Nagios 4+ is more difficult, but doable.<br />
-                    It is good to install the snmpd on each network host so that you can monitor it with Nagios.<br />
-                    Then learn to add the new host to the Nagios configuration file.
+                <li>Open a Terminal window and enter the following commands:<br />
+                    <code>sudo apt-get install -y autoconf gcc libc6 libmcrypt-dev make libssl-dev wget bc gawk dc build-essential snmp libnet-snmp-perl gettext</code><br />
+                    <code>cd /tmp</code><br />
+                    <code>sudo wget --no-check-certificate -O nagios-plugins.tar.gz https://github.com/nagios-plugins/nagios-plugins/archive/release-2.2.1.tar.gz </code><br />
+                    <code>sudo tar zxf nagios-plugins.tar.gz </code><br />
+                    <code>cd /tmp/nagios-plugins-release-2.2.1/</code><br />
+                    <code>sudo ./tools/setup</code> This command will take a while to execute<br />
+                    <code>sudo ./configure</code>  This command will take a while to complete<br />
+                    <code>sudo make</code>  This command will take a while to complete<br />
+                    <code>sudo make install</code><br />
+
+                    In practice, it is a good idea to install the snmpd on each network host so that you can monitor it with Nagios.<br />
+                    To do this, learn to add the new host to the Nagios configuration file.<br />
+                    Installing snmpd is not required for this assignment.
                 </li>
+
+                <li>After installing the plug-ins, reboot the Raspberry Pi</li>
+                <li>Open the Chromium browser to the following url:<br />
+                    <code>http://127.0.0.1/nagios</code>
+                </li>
+                <li>Under the &#39;Current Status&#39; section, select &#39;Services&#39; </li>
+                <li>Note that with the plug-ins installed most, if not all, of the services are now running</li>
 
             </ol>
             <hr />
@@ -208,13 +255,13 @@
 
         <div id="Exercise03" class="collapse in  col-lg-12">
 
-            <p>Point the browser to  <code>127.0.0.1/nagios3</code><br />
-                The homepage file will appear, similar to below.<br />               
+            <p>Point the browser to  <code>127.0.0.1/nagios</code><br />
+                From the homepage, under the &#39;Current Status&#39; section, select &#39;Services&#39; and you will see a page similar to below.<br />               
             </p>
 
                     <p>
-                        <a href="NagiosServicesSS.PNG" class="img-responsive img-rounded" target="popup" onclick="window.open('NagiosServicesSS.PNG', 'popup'); return false;">
-                            <img src="NagiosServicesSS.PNG" width="300" alt="Nagios" class="img-responsive img-responsive" /></a>Nagios Services<br />
+                        <a href="Nagios4ServicesSS.PNG" class="img-responsive img-rounded" target="popup" onclick="window.open('Nagios4ServicesSS.PNG', 'popup'); return false;">
+                            <img src="Nagios4ServicesSS.PNG" width="300" alt="Nagios" class="img-responsive img-responsive" /></a>Nagios4 Services<br />
                     </p>
 
             <ol>
