--- a/IOT06/IOT06.html
+++ b/IOT06/IOT06.html
@@ -136,7 +136,7 @@
                     <code>sudo apt-get full-upgrade</code>
                 </li>
 
-                <li>In the Terminal window enter the following command to trust the RPi-Monitor repository:<br />
+                <li>In the Terminal window enter the following commands to trust the RPi-Monitor repository:<br />
                     <code>sudo apt-get install dirmngr</code><br />
                     <code>sudo apt-key adv --recv-keys --keyserver keyserver.ubuntu.com 2C0D3C0F</code>
                 </li>
@@ -145,8 +145,8 @@
                     <code>sudo wget http://goo.gl/vewCLL -O /etc/apt/sources.list.d/rpimonitor.list</code>
                 </li>
 
-                <li>In the Terminal window enter the following command to install RPi-Monitor:<br />
-                    <code>sudo apt-get update</code>
+                <li>In the Terminal window enter the following commands to install RPi-Monitor:<br />
+                    <code>sudo apt-get update</code><br />
                     <code>sudo apt-get install rpimonitor</code>
                 </li>
 
